--- a/src/Header.css
+++ b/src/Header.css
@@ -52,11 +52,11 @@
 
 /* Separación específica para los logos - SEPARACIÓN MODERADA */
 .aguila-logo {
-  margin-right: 180px; /* Separación moderada a la derecha del águila */
+  margin-right: 190px; /* Separación moderada a la derecha del águila */
 }
 
 .toro-logo {
-  margin-left: 180px; /* Separación moderada a la izquierda del toro */
+  margin-left: 190px; /* Separación moderada a la izquierda del toro */
 }
 
 /* Texto del logo */
@@ -64,27 +64,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2px;
+  gap: 3px;
 }
 
 .logo-text h1 {
-  font-size: 17px;
-  font-weight: 700;
+  font-size: 25px;
+  font-weight: 650;
   margin: 0;
-  color: #fff;
-  text-align: center;
-  line-height: 1.2;
+  color: #f3eeee;
+  text-align: justify;
+  line-height: 1.1;
 }
 
 .logo-text span {
-  font-size: 18px;
+  font-size: 25px;
   color: #fff;
 }
 
 /* Texto en rojo */
 .red-text {
   color: #ff0000 !important; /* Rojo */
-  font-weight: 700;
+  font-weight: 800;
 }
 
 /* Para móvil */
